<resources>
    <string name="app_name">Fani Furniture</string>
    <string name="home">Home</string>
    <string name="CopyRight">Copyright %d by Dam Vu Long</string>
    <string name="gitHub">Github</string>
    <string name="email">Email</string>

    <!--Navigation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_category">Category</string>
    <string name="title_see_all">See All</string>
    <string name="title_new_products">New Products</string>
    <string name="title_popular_products">Popular Products</string>
    <string name="Error_username_empty">Please Enter Username!</string>
    <string name="Error_email_empty">Please Enter Your Email!</string>
    <string name="Error_phone_number_empty">Please Enter Your Phone Number!</string>
    <string name="Error_password_empty">Please Enter Password!</string>
    <string name="Error_confirm_password_empty">Please Confirm Password!</string>
    <string name="Error_password_short">Password too short, enter minimum 6 characters!</string>
    <string name="Error_password_not_match">Password does not match</string>
    <string name="title_logout_successfully">Logout Successfully!</string>
    <string name="title_product_name">Product Name</string>
    <string name="title_price_unit">$%S</string>
    <string name="label_button_cart">Add to Cart</string>
    <string name="message_add_to_favorite">Added To Favorite</string>
    <string name="title_pay_by_paypal">Pay by Paypal</string>
    <string name="title_pay_by_razorpay">Pay by RazorPay</string>
    <string name="title_pay_by_momo">Pay by Momo</string>
    <string name="btn_try_in_your_home">Try in your home</string>
    <string name="create_address">Create Address</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_address">Add Address</string>
    <string name="add_address_activity">Add Address</string>
    <string name="continue_to_payment">Continue to Payment</string>
    <string name="your_address">Your Address</string>
    <string name="password">Password</string>
    <string name="change_password">Change Password</string>
    <string name="description">Description</string>
    <string name="alredy_nhave_an_naccount">Alredy\nhave an \nAccount?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="register_a_new_account">Register a new account</string>
    <string name="use_another_method">Use another method</string>
    <string name="get_started">Get Started</string>
    <string name="total">Total</string>
    <string name="check_out">Check out</string>
    <string name="subtotal">Subtotal</string>
    <string name="discount">Discount</string>
    <string name="shipping">Shipping</string>
    <string name="here_s_nyour_first_nstep_with_nus">Here\'s\nyour first\nstep with\nus!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="category_name">Category Name</string>
    <string name="buy_now">Buy Now</string>
    <string name="total_price">Total Price</string>
    <string name="fast_delivery">Fast Delivery</string>
    <string name="we_operate_our_own_logistics_deliveries_are_asap_and_without_complications_just_order_and_we_bring_the_product_to_you">We operate our own logistics, deliveries are asap, and without complications, just order and we bring the product to you.</string>
    <string name="convenient_shopping">Convenient Shopping</string>
    <string name="keep_safe_shopping_from_home">Keep safe! Shopping from home</string>
    <string name="easy_to_payment">Easy to Payment</string>
    <string name="easy_online_payment_with_many_gateway">Easy online payment with many gateway</string>
    <string name="edit">Edit</string>
    <string name="new_product">New</string>
    <string name="product_name">Product Name</string>
    <string name="price">$ 0.0 </string>
    <string name="change_language">Change Language</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="success">SUCCESS!</string>
    <string name="title_your_order_will_be_delivered_soon_thank_you_for_choosing_our_app">Your order will be delivered soon. Thank you for choosing our app!</string>
    <string name="title_no_internet">No Internet</string>
    <string name="btn_wifi">Wifi</string>
    <string name="btn_mobile_data">Mobile data</string>
    <string name="title_button">Please turn on</string>
    <string name="msg_wifi">Check your Internet connection and try again</string>
    <string name="msg_airplane">You have turned on the airplane mode.</string>
    <string name="btn_airplane_mode">Airplane mode</string>
</resources>