<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by damvulong on 4/20/22, 6:12 AM
  ~  * Copyright (c) 2022 . All rights reserved.
  ~  * Last modified 4/20/22, 6:12 AM
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.addaddress.AddAddressActivity"
    android:layout_margin="@dimen/_10sdp"
    android:padding="@dimen/_15sdp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="@string/create_address"
        android:textSize="@dimen/_24sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputAddressName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp">

        <EditText
            android:id="@+id/et_add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp">

        <EditText
            android:id="@+id/et_add_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light"
            android:hint="@string/address"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp">

        <EditText
            android:id="@+id/et_add_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light"
            android:hint="@string/city"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPostalCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp">

        <EditText
            android:id="@+id/et_add_postal_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light"
            android:hint="@string/postal_code"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputAddressPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp">

        <EditText
            android:id="@+id/et_add_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_add_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/button_login"
        android:text="@string/add_address"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>