<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by damvulong on 4/29/22, 2:09 AM
  ~  * Copyright (c) 2022 . All rights reserved.
  ~  * Last modified 4/29/22, 2:09 AM
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.PaymentMethodActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light"
        app:title="Payment Method" />

    <Button
        android:id="@+id/btnPayPayPal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:textAlignment="center"
        android:text="@string/title_pay_by_paypal"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/_18sdp"/>

    <Button
        android:id="@+id/btnPayRazorpay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/title_pay_by_razorpay"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnPayMomo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/title_pay_by_momo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold" />

</LinearLayout>