<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by damvulong on 4/20/22, 5:52 AM
  ~  * Copyright (c) 2022 . All rights reserved.
  ~  * Last modified 4/20/22, 5:52 AM
  ~  */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.address.AddressActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/address_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/your_address"
        android:background="@color/primary"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_toolbar"
        tools:listitem="@layout/address_item"/>

    <Button
        android:id="@+id/btn_add_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@color/dark"
        android:text="@string/add_address_activity"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_payment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/continue_to_payment"
        android:textColor="@color/white"
        android:background="@color/dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>