<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/image_slider"
            android:layout_width="wrap_content"
            android:layout_height="220dp"
            app:iss_auto_cycle="true"
            app:iss_delay="0"
            app:iss_period="1000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_category"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/category_see_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/title_see_all"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/sflCategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <include layout="@layout/shimmer_placeholder_catagory"></include>

                <include layout="@layout/shimmer_placeholder_catagory"></include>

                <include layout="@layout/shimmer_placeholder_catagory"></include>

                <include layout="@layout/shimmer_placeholder_catagory"></include>

                <include layout="@layout/shimmer_placeholder_catagory"></include>
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_category"
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:layout_margin="10dp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="3"
            tools:listitem="@layout/category_list"
            tools:orientation="horizontal" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewNewCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="5dp">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/new_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/title_new_products"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/newProducts_see_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="8dp"
                    android:text="@string/title_see_all"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/sflNewProducts"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="MissingConstraints">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <include layout="@layout/shimmer_placeholder_new_products"></include>

                        <include layout="@layout/shimmer_placeholder_new_products"></include>

                        <include layout="@layout/shimmer_placeholder_new_products"></include>

                        <include layout="@layout/shimmer_placeholder_new_products"></include>

                        <include layout="@layout/shimmer_placeholder_new_products"></include>
                    </LinearLayout>
                </com.facebook.shimmer.ShimmerFrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_new_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/newProducts_see_all"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="7dp"
                    android:layout_marginBottom="7dp"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="3"
                    tools:listitem="@layout/new_products" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/popular_products"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="9dp"
                    android:text="@string/title_popular_products"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/popular_see_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="8dp"
                    android:text="@string/title_see_all"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_marginTop="6dp"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/new_products" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>

