<?xml version="1.0" encoding="utf-8"?><!--
  ~ /**
  ~  * Created by damvulong on 4/19/22, 9:39 PM
  ~  * Copyright (c) 2022 . All rights reserved.
  ~  * Last modified 4/19/22, 9:32 PM
  ~  */
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.DetailedActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp">

            <ImageView
                android:id="@+id/imgDetail"
                android:layout_width="@dimen/_280sdp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/amongus" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBack"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="12dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:visibility="visible"
                app:cornerRadius="4dp"
                app:icon="@drawable/ic_arrow_back"
                app:iconTint="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.355" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_170sdp"
                android:layout_below="@+id/btnBack"
                android:layout_alignParentStart="true"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/choose_color_background"
                android:elevation="@dimen/_2sdp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:background="@drawable/button_color_choose" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:background="@drawable/button_color_choose" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:background="@drawable/button_color_choose" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txtNameDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/title_product_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView

                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:textSize="@dimen/_25sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="$50" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/btnRemoveItem"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginEnd="@dimen/_7sdp"
                    android:src="@drawable/ic_minus" />

                <TextView
                    android:id="@+id/txtQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_30sdp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/btnAddItem"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:src="@drawable/ic_plus" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVirtual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:text="@string/btn_try_in_your_home"
            android:textColor="@color/black"
            android:visibility="visible"
            app:cornerRadius="4dp"
            app:icon="@drawable/ic_camera"
            app:iconTint="@color/black" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_toEndOf="@id/rbRatingStar"
                android:paddingTop="@dimen/_10sdp"
                android:text="4.0"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <RatingBar
                android:outlineAmbientShadowColor="#F9A825"
                android:id="@+id/rbRatingStar"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="197dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:isIndicator="true"
                android:numStars="5"
                android:padding="@dimen/_5sdp"
                android:stepSize="0.1" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDetailedDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="normal"
            tools:text="Something description" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/_10sdp">


            <Button
                android:id="@+id/btnAddToCart"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/button_add_to_cart"
                android:text="@string/label_button_cart"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>